code + fix auth

--- a/backend/models/emailTemplate.html
+++ b/backend/models/emailTemplate.html
@@ -165,7 +165,7 @@
                                                                         <tr style="border-collapse:collapse">
                                                                             <th style="padding:5px 10px 5px 0;Margin:0;"
                                                                                 width='50%' align='left'><span
-                                                                                    style='Margin:0;line-height:100%;color:#333333'>Scaffale<br></span>
+                                                                                    style='Margin:0;line-height:100%;color:#333333'>Reparto<br></span>
                                                                             </th>
                                                                             <td style="padding:5px 0px;Margin:0;"
                                                                                 width='50%' align='right'><span
@@ -175,7 +175,7 @@
                                                                         <tr style="border-collapse:collapse">
                                                                             <th style="padding:5px 10px 5px 0;Margin:0;"
                                                                                 width='50%' align='left'><span
-                                                                                    style='Margin:0;line-height:100%;color:#333333'>Ripiano<br></span>
+                                                                                    style='Margin:0;line-height:100%;color:#333333'>Sotto-reparto<br></span>
                                                                             </th>
                                                                             <td style="padding:5px 0px;Margin:0;"
                                                                                 width='50%' align='right'><span
