--- a/backend/models/singleToolReport.html
+++ b/backend/models/singleToolReport.html
@@ -103,6 +103,26 @@
                                                                 style='Margin:0;line-height:100%;color:#333333'>{subDepartment}</span>
                                                         </td>
                                                     </tr>
+                                                    <tr style="border-collapse:collapse">
+                                                        <th style="padding:5px 10px 5px 0;Margin:0;" width='50%'
+                                                            align='left'><span
+                                                                style='Margin:0;line-height:100%;color:#333333'>Codice<br></span>
+                                                        </th>
+                                                        <td style="padding:5px 0px;Margin:0;" width='50%' align='right'>
+                                                            <span
+                                                                style='Margin:0;line-height:100%;color:#333333'>{codice}</span>
+                                                        </td>
+                                                    </tr>
+                                                    <tr style="border-collapse:collapse">
+                                                        <th style="padding:5px 10px 5px 0;Margin:0;" width='50%'
+                                                            align='left'><span
+                                                                style='Margin:0;line-height:100%;color:#333333'>Marca<br></span>
+                                                        </th>
+                                                        <td style="padding:5px 0px;Margin:0;" width='50%' align='right'>
+                                                            <span
+                                                                style='Margin:0;line-height:100%;color:#333333'>{marca}</span>
+                                                        </td>
+                                                    </tr>
                                                 </table>
                                             </td>
                                         </tr>
