--- a/backend/models/singleEmailEvent.html
+++ b/backend/models/singleEmailEvent.html
@@ -1,6 +1,6 @@
 <div style="margin-bottom:5rem">
     <h4 style="margin-top:2rem; font-weight: bold;">
-        {nome_cognome}
+        {nome_cognome} - {type}
     </h4>
     <p>{indirizzo}</p>
     <p>{comune} - {provincia} - {cap}</p>
