--- a/backend/models/singleEmailEvent.html
+++ b/backend/models/singleEmailEvent.html
@@ -1,7 +1,8 @@
 <div style="margin-bottom:5rem">
     <h4 style="margin-top:2rem; font-weight: bold;">
-        {nome_cognome} - {type}
+        {nome_cognome}
     </h4>
+    <p>{type}</p>
     <p>{indirizzo}</p>
     <p>{comune} - {provincia} - {cap}</p>
     <p>{telefono}</p>
