--- a/backend/models/singleEmailEvent.html
+++ b/backend/models/singleEmailEvent.html
@@ -2,6 +2,8 @@
     <h4 style="margin-top:2rem; font-weight: bold;">
         {nome_cognome}
     </h4>
+    <p>inizio: {start}</p>
+    <p>fine: {end}</p>
     <p>{type}</p>
     <p>{indirizzo}</p>
     <p>{comune} - {provincia} - {cap}</p>
