--- a/backend/models/singleEmailEvent.html
+++ b/backend/models/singleEmailEvent.html
@@ -2,11 +2,11 @@
     <h4 style="margin-top:2rem; font-weight: bold;">
         {nome_cognome}
     </h4>
-    <p>inizio: {start}</p>
-    <p>fine: {end}</p>
-    <p>{type}</p>
-    <p>{indirizzo}</p>
-    <p>{comune} - {provincia} - {cap}</p>
-    <p>{telefono}</p>
-    <p>{bonus} - {termico_elettrico}</p>
+    <div><span>inizio: {start}</span></div>
+    <div><span>fine: {end}</span></div>
+    <div><span>{type}</span></div>
+    <div><span>{indirizzo}</span></div>
+    <div><span>{comune} - {provincia} - {cap}</span></div>
+    <div><span>{telefono}</span></div>
+    <div><span>{bonus} - {termico_elettrico}</span></div>
 </div>
