--- a/backend/models/singleEmailEvent.html
+++ b/backend/models/singleEmailEvent.html
@@ -1,12 +1,13 @@
 <div style="margin-bottom:5rem">
-    <h4 style="margin-top:2rem; font-weight: bold;">
+    <!-- <h4 style="margin-top:2rem; font-weight: bold;">
         {nome_cognome}
-    </h4>
+    </h4> -->
     <div><span>inizio: {start}</span></div>
     <div><span>fine: {end}</span></div>
-    <div><span>{type}</span></div>
+    <div><span style="margin-top:2rem; font-weight: bold;">{nome_cognome}</span></div>
     <div><span>{indirizzo}</span></div>
     <div><span>{comune} - {provincia} - {cap}</span></div>
     <div><span>{telefono}</span></div>
     <div><span>{bonus} - {termico_elettrico}</span></div>
+    <div><span>{type}</span></div>
 </div>
