--- a/backend/models/pdfs/sopralluogo_elettrico.html
+++ b/backend/models/pdfs/sopralluogo_elettrico.html
@@ -1,7 +1,7 @@
 <body>
     <h1
         style="display:flex;justify-content: center;text-align: center;margin-bottom:2rem;font-stretch: ultra-condensed;font-size: 9;">
-        <u>SOPRALLUOGO TERMICO</u>
+        <u>SOPRALLUOGO ELETTRICO</u>
     </h1>
     <table class='es-wrapper' width='100%' cellspacing='0' cellpadding='0'
         style='margin-bottom:4rem;mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:0;Margin:0;width:100%;background-repeat:repeat;background-position:center top'>
@@ -35,7 +35,7 @@
                         <td
                             style='padding:0;Margin:0;text-align: center;width:40%;border: 1px solid black;vertical-align: middle'>
                             <span style="font-size: 9;font-weight: bold;">
-                                INDIRIZZO
+                                LUOGO
                             </span>
                         </td>
                         <td
@@ -54,6 +54,19 @@
                         <td
                             style='font-size: 9;padding:0;Margin:0;text-align: center;width:60%;border: 1px solid black;vertical-align: middle'>
                             <u>{date}</u>
+                        </td>
+                    </tr>
+                    <tr
+                        style='border-collapse:collapse;margin-right: auto;margin-left: auto;vertical-align: middle;height:1.8rem;'>
+                        <td
+                            style='padding:0;Margin:0;text-align: center;width:40%;border: 1px solid black;vertical-align: middle'>
+                            <span style="font-size: 9;font-weight: bold;">
+                                TECNICO
+                            </span>
+                        </td>
+                        <td
+                            style='font-size: 9;padding:0;Margin:0;text-align: center;width:60%;border: 1px solid black;vertical-align: middle'>
+                            <u>{tecnico}</u>
                         </td>
                     </tr>
                 </table>
