--- a/backend/models/singleEmailEvent.html
+++ b/backend/models/singleEmailEvent.html
@@ -1,12 +1,8 @@
 <div style="margin-bottom:3rem">
-    <!-- <h4 style="margin-top:2rem; font-weight: bold;">
-        {nome_cognome}
-    </h4> -->
-    <div><span>inizio: {start}</span></div>
-    <div><span>fine: {end}</span></div>
+    <div><span>{start}</span></div>
     <div><span style="margin-top:2rem; font-weight: bold;">{nome_cognome}</span></div>
     <div><span>{indirizzo}</span></div>
-    <div><span>{comune} - {provincia} - {cap}</span></div>
+    <div><span>{comune} - {provincia}</span></div>
     <div><span>{telefono}</span></div>
     <div><span>{bonus} - {termico_elettrico}</span></div>
     <div><span>{type}</span></div>
